--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,7 +1,13 @@
 <mat-card>
-  <mat-form-field>
-    <textarea rows="6" matInput [(ngModel)]="enteredValue"></textarea>
-  </mat-form-field>
-  <button mat-raised-button color="accent" (click)="addPost()">save post</button>
-  <p>{{newPost}}</p>
+  <form  (submit)="addPost(postForm)" #postForm ="ngForm">
+    <mat-form-field>
+      <input matInput type="text" name ="title" ngModel required #title='ngModel'>
+      <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <textarea rows="6" matInput name="content" ngModel required #content='ngModel'></textarea>
+      <mat-error *ngIf="content.invalid">Please enter a post content</mat-error>
+    </mat-form-field>
+    <button type="submit" mat-raised-button color="accent">save post</button>
+  </form>
 </mat-card>
