--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,11 +1,16 @@
 <mat-card>
   <form  (submit)="addPost(postForm)" #postForm ="ngForm">
     <mat-form-field>
-      <input matInput type="text" name ="title" ngModel required #title='ngModel'>
+      <input matInput type="text" name ="title"
+             ngModel minlength="3" required
+              placeholder="post title" #title='ngModel'>
       <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <textarea rows="6" matInput name="content" ngModel required #content='ngModel'></textarea>
+      <textarea rows="6" matInput name="content"
+                ngModel required
+                placeholder="post content" #content='ngModel'>
+      </textarea>
       <mat-error *ngIf="content.invalid">Please enter a post content</mat-error>
     </mat-form-field>
     <button type="submit" mat-raised-button color="accent">save post</button>
