--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,18 +1,22 @@
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form  (submit)="addPost(postForm)" #postForm ="ngForm" *ngIf="!isLoading">
+  <form [formGroup]="form" (submit)="addPost()" *ngIf="!isLoading">
     <mat-form-field>
-      <input matInput type="text" name ="title"
-             [ngModel]="post?.title" minlength="3" required
-              placeholder="post title" #title='ngModel'>
-      <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+      <input matInput type="text" formControlName="title" required
+              placeholder="post title" />
+      <mat-error *ngIf="form.get('title').invalid">Please enter a post title</mat-error>
     </mat-form-field>
+    <div>
+      <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+      <input type="file" #filePicker/>
+    </div>
+    <br>
     <mat-form-field>
-      <textarea rows="6" matInput name="content"
-                [ngModel]="post?.content" required
-                placeholder="post content" #content='ngModel'>
+      <textarea rows="6" matInput formControlName="content"
+                required
+                placeholder="post content">
       </textarea>
-      <mat-error *ngIf="content.invalid">Please enter a post content</mat-error>
+      <mat-error *ngIf="form.get('content').invalid">Please enter a post content</mat-error>
     </mat-form-field>
     <button type="submit" mat-raised-button color="accent">save post</button>
   </form>
